# flipper-tui

./: .editorconfig  .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/flipper-core/: Cargo.toml
crates/flipper-core/src/: backup.rs  device.rs  exceptions.rs  info.rs  lib.rs  protocol.rs  settings.rs  storage.rs  updates.rs
crates/flipper-transport/: Cargo.toml
crates/flipper-transport/src/: base.rs  lib.rs  mock.rs  registry.rs  serial.rs
crates/flipper-tui/: Cargo.toml
crates/flipper-tui-app/: Cargo.toml
crates/flipper-tui-app/src/: keymap.rs  lib.rs  run.rs  screens.rs
crates/flipper-tui-app/src/screens/: apps.rs  dashboard.rs  devices.rs  help.rs  settings.rs  storage.rs  updates.rs
crates/flipper-tui/src/: cli_main.rs  main.rs
crates/flipper-tui/tests/: live_device.rs
docs/superpowers/plans/: 2026-07-01-flipper-tui-plan.md
docs/superpowers/specs/: 2026-06-26-flipper-tui-design.md
scripts/: README.md  install.ps1  install.sh
src/flipper_tui/: __init__.py  __main__.py
