[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flipper-tui"
version = "0.1.0"
description = "Terminal UI for the Flipper Zero — feature-parity with qFlipper, in your shell."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "ankurCES" }]
keywords = ["flipper", "flipper-zero", "tui", "terminal", "qflipper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.79",
    "pyserial>=3.5",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "syrupy>=4.7",
]
dev = [
    "ruff>=0.5",
]

[project.scripts]
flipper-tui = "flipper_tui.__main__:main"
flipper-tui-cli = "flipper_tui.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flipper_tui"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config -q"
markers = [
    "live: requires a real Flipper attached at FLIPPER_TUI_DEVICE",
]

[tool.hatch.build.targets.wheel.force-include]
"docs/superpowers/specs" = "flipper_tui/_docs/specs"
"docs/superpowers/plans" = "flipper_tui/_docs/plans"
