[package]
name = "flipper-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "flipper-tui"
path = "src/main.rs"

[[bin]]
name = "flipper-tui-cli"
path = "src/cli_main.rs"

[lints]
workspace = true

[dependencies]
flipper-transport = { path = "../flipper-transport" }
flipper-core = { path = "../flipper-core" }
flipper-tui-app = { path = "../flipper-tui-app" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }